# agentic-interview

./: .env.example  .gitignore  CLAUDE.md  README.md  automated_attack_test.py  create_user.py  db.sqlite3  export.py  hardcopy.0  init.py  insert_resume.py  knowledge_base.txt  main.py  manage.py  monitor_attack.py  mylog.txt  problem.html  pyproject.toml  quick_check.py  requirements.txt  result.json  screenlog.0  simple_monitor.py  start_server.py  test.json  translate_helper.py  upd_data.py  users.json  攻击数据集.csv.backup_20250912_104952  攻击数据集.csv.backup_20250912_105922  攻击数据集.csv.backup_20250912_140945  攻击数据集.csv.backup_20250912_141304  攻击数据集.csv.backup_20250912_151027  攻击数据集.csv.backup_20250912_171548  攻击数据集.csv.backup_20250912_172242  攻击数据集.csv.backup_20250912_172817  攻击数据集.csv.backup_20250912_173430  攻击数据集.csv.backup_20250912_174103  攻击数据集.csv.backup_20250912_174713  攻击数据集.csv.backup_20250912_175254  (+5 more)
.claude/: index.json
LLM/: llm_proxy.py
data/: data.jsonl  problem.jsonl
frontend/: .env.example  CLAUDE.md  package-lock.json  package.json  vite.config.ts
frontend/src/: config.ts  main.ts
frontend/src/assets/: main.css
frontend/src/components/: FormSection.vue  MarkdownContent.vue  RadarChart.vue  ResumeForm.vue  ScoreRing.vue  TheWelcome.vue  WriteEditor.vue
frontend/src/layout/: MainLayout.vue
frontend/src/router/: index.ts
frontend/src/services/: authService.ts
frontend/src/stores/: auth.ts
frontend/src/types/: resume.ts  scoring.ts
frontend/src/utils/: markdown.ts  xfyun-asr.ts
frontend/src/views/: EvaluationResultView.vue  FaceToFaceTestView.vue  FaceVerificationDialog.vue  HomeView.vue  InterviewResultView.vue  LoginView.vue  ModifyCvView.vue  NewCvView.vue  NotFoundView.vue  ResumeRewriterView.vue  SpokenLanguageView.vue  TalkToAzureView.vue  WriteTestView.vue
interview/: CLAUDE.md  auth_utils.py  consumers.py  interviewer_agent.py  llm.py  routing.py  rubrics.py  urls.py  users.py  views.py
interview/aes/: __init__.py  baselines.py  data_loader.py  metrics.py  pipeline.py  prompt_loader.py  run_experiment.py  schemas.py  traits.py
interview/aes/prompts/: aes_trait_scoring.yaml
interview/agents/: CLAUDE.md  __init__.py  base_agent.py  cache.py  coordinator.py  graph.py  guardrails.py  memory.py  qa_models.py  question_generator.py  question_verifier.py  resume_parser.py  retrieval.py  schemas.py  scoring_agent.py  security_agent.py  session.py  summary_agent.py  utils.py
interview/agents/memory/: __init__.py  retriever.py  store.py
interview/agents/prompts/: __init__.py  question_generator.yaml  question_verifier.yaml  resume_parser.yaml  scoring_agent.yaml  scoring_dimension.yaml  (+3 more)
interview/prompt/: Interview-face2face-System-Prompt.st
interview/tests/: __init__.py  test_aes_module.py  test_graph_pure.py  test_p0_consistency.py  test_per_importance.py  test_question_verifier.py  test_scoring_ensemble.py  test_scoring_mts.py  test_summary_evidence.py
interview/tools/: CLAUDE.md  __init__.py  db.py  rag_tool.py  rag_tools.py
interview_api/: urls.py  views.py
interview_backend/: CLAUDE.md  asgi.py  settings.py  urls.py  wsgi.py
interview_project/: settings.py  urls.py
src/: main.py
src/Agents/: agents.py
src/mongo/: insert.py
(+3 files in other folders)
